# hati-spectral-hound

./: .env.example  .gitignore  README.md  START HATI.cmd  index.html  pyproject.toml
.github/workflows/: tests.yml
.vite/: manifest.json
assets/: HatiExperience-vEc-9hxI.js  index-CZxln2QV.js  index-C_mJIHzU.css  layout-segment-context-gt2Ws6F6.js
config/: hati.example.json
docs/: BUILT_WITH_CODEX.md  CAMERA_SETUP.md  DEMO_PLAN.md  DEVPOST_DRAFT.md  HARDWARE_NOTES.md  LOCAL_GATE.md  TELEGRAM_SETUP.md  VIDEO_RUN_OF_SHOW.md  VISION_SETUP.md
sample_data/: README.md  eval_cases.json  improvement_cases.json
scripts/: capture-test-event.ps1  discover-tuya-device.ps1  discover-tuya-device.py  hati.ps1  learn-from-latest-event.ps1  probe-camera.ps1  probe-tuya-local.py  process-latest-event.ps1  recover-camera-login.ps1  rotate-camera-viewer-credential.ps1  run-hati-once.ps1  save-camera-credential.ps1  save-openai-api-key.ps1  save-telegram-credential.ps1  save-tuya-cloud-credential.ps1  setup.ps1  show-camera-credential.ps1  start-hati.ps1  start-telegram.ps1  test-telegram.ps1  test-tuya-dark-weak.py  test-tuya-master-power.py  test.ps1  try-camera-passwords.ps1
site/: README.md  package-lock.json  package.json
site/.openai/: hosting.json
site/app/: HatiExperience.tsx  globals.css  layout.tsx  (+1 more)
tests/: test_actuator.py  test_camera.py  test_config.py  test_decision.py  test_demo.py  test_evaluation.py  test_event_store.py  test_learning.py  test_local_gate.py  test_motion.py  test_pipeline.py  test_supervisor.py  test_telegram.py  test_vision.py  test_watch.py
(+22 files in other folders)
